landing page done and dusted

--- a/src/Sass&Css/_variables&functions.scss
+++ b/src/Sass&Css/_variables&functions.scss
@@ -140,3 +140,14 @@ $spotifyGreen: #2ecc71;
   }
 }
 
+@mixin fullScreen{
+    width: 100vw;
+    height: 100vh;
+}
+
+@mixin coverer {
+    @include fullScreen;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
