--- a/src/Sass&Css/App.css
+++ b/src/Sass&Css/App.css
@@ -1,29 +1,139 @@
+:root {
+  --headerOpacity: 1;
+  --headerScale: 1;
+}
+
 * {
-  margin: 0;
-  padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: "Roboto";
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
 }
 
-*::-webkit-scrollbar-track {
-  background-color: white;
-}
-
-*::-webkit-scrollbar {
-  width: 0.45rem;
-  background-color: white;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: #2ecc71;
+html, body {
+  height: 100vh;
+  overflow-x: hidden;
+  width: 101%;
 }
 
 html {
-  font-size: 1vw;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 150%;
+  line-height: 1.4;
 }
 
-html li {
-  list-style: none;
+body {
+  margin: 0;
+}
+
+.video-header {
+  position: absolute;
+  text-align: center;
+  width: 100vw;
+  height: 100vh;
+}
+
+.video-header, .video-header video, .video-header .viewport-header {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.video-header video {
+  background: white;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.video-header .viewport-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  opacity: 1;
+  opacity: var(--headerOpacity);
+  -webkit-transform: scale(var(--headerScale));
+          transform: scale(var(--headerScale));
+}
+
+.video-header .viewport-header h2 {
+  text-shadow: 1rem 1rem 1rem rgba(206, 89, 55, 0);
+  font-family: 'Syncopate', sans-serif;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 1rem;
+  line-height: 1.2;
+  font-size: 2rem;
+  text-align: center;
+}
+
+.video-header .viewport-header h2 span {
+  display: block;
+  font-size: 6rem;
+  letter-spacing: -0.2rem;
+}
+
+.video-header .viewport-header .arrow {
+  color: white;
+  margin-top: 2rem;
+  animation: jump 2s infinite alternate-reverse ease;
+}
+
+@-webkit-keyframes jump {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  100% {
+    -webkit-transform: translateY(1rem);
+            transform: translateY(1rem);
+  }
+}
+
+@keyframes jump {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  100% {
+    -webkit-transform: translateY(1rem);
+            transform: translateY(1rem);
+  }
+}
+
+.aboutMe {
+  width: 100vw;
+  height: 100vh;
+  background: white;
+  position: relative;
+  padding: 1rem;
+  margin-top: 100vh;
+}
+
+.aboutMe::before {
+  content: "";
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  top: -100vh;
+}
+
+.aboutMe p {
+  max-width: 600px;
+  margin: 1rem auto;
 }
 /*# sourceMappingURL=App.css.map */
