--- a/src/Sass&Css/App.scss
+++ b/src/Sass&Css/App.scss
@@ -1,17 +1,94 @@
 @import "./variables&functions";
+:root {
+  --headerOpacity: 1;
+  --headerScale: 1;
+}
 
 *{
-    margin: 0;
-    padding: 0;
   box-sizing: border-box;
-  font-family: "Roboto";
-  @include scrollbar;
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
+
+}
+html, body {
+  height: 100vh;
+  overflow-x: hidden;
+  width: 101%;
+}
+html {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 150%;
+  line-height: 1.4;
+}
+body {
+  margin: 0;
+}
+
+//LANDINGPAGE
+.video-header {
+  position: absolute;
+  text-align: center;
+ @include fullScreen;
+  &, video, .viewport-header {
+    @include coverer;
+  }
+  video {
+    background: white;
+    object-fit: cover;
+  }
+  .viewport-header {
+    @include flexCenter(column);
+    opacity: 1;
+    opacity: var(--headerOpacity);
+    transform: scale(var(--headerScale));
+    h2 {
+      text-shadow: 1rem 1rem 1rem rgba(206,89,55,0);
+      font-family: 'Syncopate', sans-serif;
+      color: white;
+      text-transform: uppercase;
+      letter-spacing: 1rem;
+      line-height: 1.2;
+      font-size: 2rem;
+      text-align: center;
+      span {
+        display: block;
+        font-size: 6rem;
+        letter-spacing: -0.2rem;
+      }
+    }
+    .arrow{
+      color: white;
+      margin-top: 2rem;
+      animation: jump 2s infinite alternate-reverse ease;
+    }
+  }
+}
+
+@keyframes jump {
+  0%{
+    transform: translateY(0)
+  }
+  100%{
+    transform: translateY(1rem)
+  }
   
 }
 
-html{
-  font-size: 1vw;
-  li{
-    list-style: none;
+
+.aboutMe {
+  @include fullScreen;
+  background: white;
+  position: relative;
+  padding: 1rem;
+  margin-top: 100vh;
+  &::before {
+    content: "";
+    @include coverer;
+    top: -100vh;
+  }
+  p {
+    max-width: 600px;
+    margin: 1rem auto;
   }
 }
