--- a/src/Sass&Css/App.scss
+++ b/src/Sass&Css/App.scss
@@ -1,8 +1,6 @@
 @import "./variables&functions";
-:root {
-  --headerOpacity: 1;
-  --headerScale: 1;
-}
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@200;400;500&display=swap');
+
 
 *{
   box-sizing: border-box;
@@ -11,26 +9,21 @@
   scroll-behavior: smooth;
 
 }
-html, body {
-  height: 100vh;
-  overflow-x: hidden;
-  width: 101%;
-}
 html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 150%;
-  line-height: 1.4;
+  
 }
 body {
   margin: 0;
+  overflow-x: hidden;
 }
 
 //LANDINGPAGE
 .video-header {
-  position: absolute;
+  position: relative;
   text-align: center;
  @include fullScreen;
-  &, video, .viewport-header {
+  video, .viewport-header {
     @include coverer;
   }
   video {
@@ -38,10 +31,9 @@ body {
     object-fit: cover;
   }
   .viewport-header {
+    font-size: 150%;
+  line-height: 1.4;
     @include flexCenter(column);
-    opacity: 1;
-    opacity: var(--headerOpacity);
-    transform: scale(var(--headerScale));
     h2 {
       text-shadow: 1rem 1rem 1rem rgba(206,89,55,0);
       font-family: 'Syncopate', sans-serif;
@@ -79,16 +71,37 @@ body {
 .aboutMe {
   @include fullScreen;
   background: white;
-  position: relative;
   padding: 1rem;
-  margin-top: 100vh;
-  &::before {
-    content: "";
-    @include coverer;
-    top: -100vh;
+  text-align: center;
+   p:nth-child(1) {
+    font-size: 2rem;
+    font-family: 'Barlow', sans-serif;
+    font-weight: 500;
   }
-  p {
-    max-width: 600px;
-    margin: 1rem auto;
-  }
+ .aboutMe-div{
+    width: 100%;
+    @include flexCenter(row);
+    height: fit-content;
+    div{
+      margin: 1rem;
+    }
+    .aboutme-left{
+      p{
+        margin-top: 1rem;
+      }
+      text-align: left;
+      width: 50%;
+    }
+    .aboutme-right{
+      background-color: red;
+      width: 50%;
+     height: 100%;
+    }
+}
+}
+.skills{
+  @include fullScreen;
+  background: white;
+  background-color: white;
+  position: relative;
 }
