--- a/src/Sass&Css/App.css
+++ b/src/Sass&Css/App.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@200;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap");
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -101,6 +102,7 @@ body {
 }
 
 .aboutMe {
+  font-size: 1vw;
   width: 100vw;
   height: 100vh;
   background: white;
@@ -109,13 +111,17 @@ body {
 }
 
 .aboutMe p:nth-child(1) {
+  margin-top: 4em;
   font-size: 2rem;
   font-family: 'Barlow', sans-serif;
   font-weight: 500;
 }
 
 .aboutMe .aboutMe-div {
-  width: 100%;
+  font-family: "Inter", sans-serif;
+  width: 70%;
+  margin: 0 auto;
+  margin-top: 8em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -134,23 +140,93 @@ body {
   height: fit-content;
 }
 
-.aboutMe .aboutMe-div div {
-  margin: 1rem;
-}
-
 .aboutMe .aboutMe-div .aboutme-left {
   text-align: left;
   width: 50%;
 }
 
+.aboutMe .aboutMe-div .aboutme-left h1 {
+  font-size: 3em;
+}
+
 .aboutMe .aboutMe-div .aboutme-left p {
-  margin-top: 1rem;
+  margin: 1em 0;
+  font-size: 1.5em;
+}
+
+.aboutMe .aboutMe-div .aboutme-left button {
+  -webkit-appearance: button;
+     -moz-appearance: button;
+          appearance: button;
+  background-color: #000;
+  background-image: none;
+  border: 1px solid #000;
+  border-radius: 4px;
+  -webkit-box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
+          box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  margin: 0 5px 10px 0;
+  overflow: visible;
+  padding: 12px 40px;
+  text-align: center;
+  text-transform: none;
+  -ms-touch-action: manipulation;
+      touch-action: manipulation;
+  -moz-user-select: none;
+   -ms-user-select: none;
+       user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  -webkit-transition: background-color 500ms;
+  transition: background-color 500ms;
+}
+
+.aboutMe .aboutMe-div .aboutme-left button:focus {
+  text-decoration: none;
+}
+
+.aboutMe .aboutMe-div .aboutme-left button:hover {
+  text-decoration: none;
+  background-color: gray;
+}
+
+.aboutMe .aboutMe-div .aboutme-left button:active {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.125) 0 3px 5px inset;
+          box-shadow: rgba(0, 0, 0, 0.125) 0 3px 5px inset;
+  outline: 0;
+}
+
+.aboutMe .aboutMe-div .aboutme-left button:not([disabled]):active {
+  -webkit-box-shadow: #fff 2px 2px 0 0, #000 2px 2px 0 1px;
+          box-shadow: #fff 2px 2px 0 0, #000 2px 2px 0 1px;
+  -webkit-transform: translate(2px, 2px);
+          transform: translate(2px, 2px);
+}
+
+@media (min-width: 768px) {
+  .aboutMe .aboutMe-div .aboutme-left button .button-50 {
+    padding: 12px 50px;
+  }
 }
 
 .aboutMe .aboutMe-div .aboutme-right {
-  background-color: red;
+  margin: 2em 0;
   width: 50%;
   height: 100%;
+}
+
+.aboutMe .aboutMe-div .aboutme-right img {
+  width: 40em;
+  height: 24em;
 }
 
 .skills {
