--- a/src/Sass&Css/App.scss
+++ b/src/Sass&Css/App.scss
@@ -1,5 +1,6 @@
 @import "./variables&functions";
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@200;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap');
 
 
 *{
@@ -7,6 +8,7 @@
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
+ 
 
 }
 html {
@@ -69,31 +71,45 @@ body {
 
 
 .aboutMe {
+  font-size: 1vw;
   @include fullScreen;
   background: white;
   padding: 1rem;
   text-align: center;
    p:nth-child(1) {
+    margin-top: 4em;
     font-size: 2rem;
     font-family: 'Barlow', sans-serif;
     font-weight: 500;
   }
  .aboutMe-div{
-    width: 100%;
+  font-family: "Inter", sans-serif;;
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 8em;
     @include flexCenter(row);
     height: fit-content;
-    div{
-      margin: 1rem;
-    }
+    
     .aboutme-left{
+      h1{
+        font-size: 3em;
+      }
       p{
-        margin-top: 1rem;
+        margin: 1em 0;
+        font-size: 1.5em;
       }
       text-align: left;
       width: 50%;
+      button{
+        @include button;
+      }
     }
     .aboutme-right{
-      background-color: red;
+     img{
+      width: 40em;
+      height: 24em;
+     }
+     margin: 2em 0;
       width: 50%;
      height: 100%;
     }
