--- a/src/Sass&Css/_variables&functions.scss
+++ b/src/Sass&Css/_variables&functions.scss
@@ -11,27 +11,56 @@ $discordblue: rgb(99,98,203);
 $boxColor: rgb(0,162,226);
 $spotifyGreen: #2ecc71;
 @mixin button {
-    position: relative;
-    padding: 0.6rem 1.5rem;
-    margin: 0rem 0.7rem 0.7rem 0rem;
-    border-radius: 0.3rem;
-    font-size: 1rem;
-    color: #FFF;
-    text-decoration: none;
-    background-color: #2ecc71;
-    border: none;
-    border-bottom: 0.3rem solid #27ae60;
-    text-shadow: 0px -0.1rem #27ae60;
-    transition: border 0.1s;
-    cursor: pointer;
+      appearance: button;
+      background-color: #000;
+      background-image: none;
+      border: 1px solid #000;
+      border-radius: 4px;
+      box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
+      box-sizing: border-box;
+      color: #fff;
+      cursor: pointer;
+      display: inline-block;
+      font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 20px;
+      margin: 0 5px 10px 0;
+      overflow: visible;
+      padding: 12px 40px;
+      text-align: center;
+      text-transform: none;
+      touch-action: manipulation;
+      user-select: none;
+      -webkit-user-select: none;
+      vertical-align: middle;
+      white-space: nowrap;
+      transition: background-color 500ms;
+    
+    &:focus {
+      text-decoration: none;
+    }
+    &:hover {
+      text-decoration: none;
+      background-color: gray;
+    }
+    &:active {
+      box-shadow: rgba(0, 0, 0, .125) 0 3px 5px inset;
+      outline: 0;
+    }
+    &:not([disabled]):active {
+      box-shadow: #fff 2px 2px 0 0, #000 2px 2px 0 1px;
+      transform: translate(2px, 2px);
+    }
+    
+    @media (min-width: 768px) {
+      .button-50 {
+        padding: 12px 50px;
+      }
+    }
+}
 
-    button:hover, button:active {
-        transform: translate(0px,5px);
-        border-bottom: 1px solid #2ecc71;
-      
-       }
-
-   }
+   
 
 
 @mixin flexCenter($direction){
