--- a/src/Sass&Css/App.css
+++ b/src/Sass&Css/App.css
@@ -142,7 +142,7 @@ body {
 
 .aboutMe .aboutMe-div .aboutme-left {
   text-align: left;
-  width: 50%;
+  width: 100%;
 }
 
 .aboutMe .aboutMe-div .aboutme-left h1 {
@@ -235,5 +235,10 @@ body {
   background: white;
   background-color: white;
   position: relative;
+}
+
+.plx {
+  padding: 0;
+  margin: 0;
 }
 /*# sourceMappingURL=App.css.map */
