--- a/src/Sass&Css/App.scss
+++ b/src/Sass&Css/App.scss
@@ -99,7 +99,7 @@ body {
         font-size: 1.5em;
       }
       text-align: left;
-      width: 50%;
+      width: 100%;
       button{
         @include button;
       }
@@ -120,4 +120,9 @@ body {
   background: white;
   background-color: white;
   position: relative;
+}
+
+.plx{
+  padding: 0;
+  margin: 0;
 }
