--- a/src/Sass&Css/App.scss
+++ b/src/Sass&Css/App.scss
@@ -89,6 +89,9 @@ body {
     margin-top: 8em;
     @include flexCenter(row);
     height: fit-content;
+    .plx{
+      width: 50%;
+    }
     
     .aboutme-left{
       h1{
@@ -106,8 +109,8 @@ body {
     }
     .aboutme-right{
      img{
-      width: 40em;
-      height: 24em;
+      width: fit-content;
+      height: 21em;
      }
      margin: 2em 0;
       width: 50%;
@@ -117,12 +120,14 @@ body {
 }
 .skills{
   @include fullScreen;
-  background: white;
-  background-color: white;
-  position: relative;
+  @include flexCenter(row);
+  border: 2px solid black;
+  background-color: $card;
+  color: white;
+  div{
+    width: 40%;
+    border: 2px solid white;
+    text-align: center;
+  }
 }
 
-.plx{
-  padding: 0;
-  margin: 0;
-}
