--- a/src/Sass&Css/App.css
+++ b/src/Sass&Css/App.css
@@ -238,7 +238,7 @@ body {
 .skills {
   width: 100vw;
   height: 100vh;
-  height: 65vh;
+  height: 45vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -258,12 +258,29 @@ body {
 }
 
 .skills .skills__left, .skills .skills__right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 40%;
+  height: 60%;
   text-align: Center;
+  background-color: #4d4d4d;
+  border-radius: 2rem;
+  margin: 0 2rem;
 }
 
 .skills .skills__left h1, .skills .skills__right h1 {
-  color: #ff735c;
+  color: white(255, 115, 92);
 }
 
 .cards {
