--- a/src/Sass&Css/App.scss
+++ b/src/Sass&Css/App.scss
@@ -123,16 +123,21 @@ body {
 
 .skills{
   @include fullScreen;
-  height: 65vh;
+  height: 45vh;
   @include flexCenter(row);
   border: 2px solid black;
   background-color: $card;
   color: white;
   .skills__left, .skills__right{
+    @include flexCenter(column);
     width: 40%;
+    height: 60%;
     text-align: Center;
+    background-color: $gray;
+    border-radius: 2rem;
+    margin: 0 2rem;
     h1{
-      color: rgb(255,115,92);
+      color: white(255,115,92);
     }
   }
 }
