--- a/src/Sass&Css/App.scss
+++ b/src/Sass&Css/App.scss
@@ -83,7 +83,7 @@ body {
     font-weight: 500;
   }
  .aboutMe-div{
-  font-family: "Inter", sans-serif;;
+  font-family: "Inter", sans-serif;
     width: 70%;
     margin: 0 auto;
     margin-top: 8em;
@@ -137,7 +137,10 @@ body {
     border-radius: 2rem;
     margin: 0 2rem;
     h1{
+      font-family: "Inter", sans-serif;
       color: white(255,115,92);
+      font-size: 2rem;
+      letter-spacing: 0.1rem;
     }
   }
 }
