--- a/src/Sass&Css/App.scss
+++ b/src/Sass&Css/App.scss
@@ -69,7 +69,7 @@ body {
   
 }
 
-
+//ABOUT ME
 .aboutMe {
   font-size: 1vw;
   @include fullScreen;
@@ -179,3 +179,19 @@ body {
   }
 }
 
+//MyWorks
+
+.mywork{
+  @include fullScreen;
+  height: 70vh;
+  text-align: center;
+  @include flexCenter(column)
+}
+
+//values
+
+.values{
+  @include fullScreen;
+  height: 75vh;
+  background-color: black;
+}
