text for the values section

--- a/src/Sass&Css/App.css
+++ b/src/Sass&Css/App.css
@@ -363,7 +363,28 @@ body {
 .values {
   width: 100vw;
   height: 100vh;
-  height: 75vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100vh;
   background-color: black;
+  color: white;
+  text-align: center;
+}
+
+.values > * {
+  margin-bottom: 1rem;
+  font-size: 3rem;
+  width: 70%;
 }
 /*# sourceMappingURL=App.css.map */
