--- a/src/Sass&Css/App.scss
+++ b/src/Sass&Css/App.scss
@@ -192,6 +192,14 @@ body {
 
 .values{
   @include fullScreen;
-  height: 75vh;
+  @include flexCenter(column);
+  height: 100vh;
   background-color: black;
+  color: white;
+  text-align: center;
+  & > *{
+    margin-bottom: 1rem;
+    font-size: 3rem;
+    width: 70%;
+  }
 }
