--- a/src/Sass&Css/App.scss
+++ b/src/Sass&Css/App.scss
@@ -192,6 +192,7 @@ body {
 
 .values{
   @include fullScreen;
+  padding: 2rem;
   @include flexCenter(column);
   height: 100vh;
   background-color: black;
@@ -199,7 +200,13 @@ body {
   text-align: center;
   & > *{
     margin-bottom: 1rem;
-    font-size: 3rem;
+    font-size: 2rem;
     width: 70%;
   }
+}
+
+//CONTACT
+
+.contact{
+  @include fullScreen;
 }
