--- a/src/Sass&Css/App.css
+++ b/src/Sass&Css/App.css
@@ -392,5 +392,145 @@ body {
 .contact {
   width: 100vw;
   height: 100vh;
+  font-size: 1vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.contact .card {
+  background: -webkit-gradient(linear, left top, left bottom, from(#e84c3d), color-stop(26%, #e84c3d), color-stop(26%, #ecedef), to(#ecedef));
+  background: linear-gradient(to bottom, #e84c3d 0%, #e84c3d 26%, #ecedef 26%, #ecedef 100%);
+  height: 30em;
+  float: left;
+  position: relative;
+  padding: 1em;
+}
+
+.contact .cardLeft {
+  border-top-left-radius: 1em;
+  border-bottom-left-radius: 1em;
+  width: 40em;
+}
+
+.contact .cardRight {
+  padding: 3em 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: top;
+      -ms-flex-pack: top;
+          justify-content: top;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 12.8em;
+  border-left: .18em dashed #fff;
+  border-radius: 1em;
+}
+
+.contact .cardRight:before, .contact .cardRight:after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: .9em;
+  height: .9em;
+  background: #fff;
+  border-radius: 50%;
+  left: -.5em;
+}
+
+.contact .cardRight:before {
+  top: -.4em;
+}
+
+.contact .cardRight:after {
+  bottom: -.4em;
+}
+
+.contact h1 {
+  font-size: 1.1em;
+  margin-top: 0.5em;
+  font-size: 3em;
+}
+
+.contact h1 span {
+  font-weight: normal;
+}
+
+.contact .title, .contact .name, .contact .seat, .contact .time {
+  text-transform: uppercase;
+  font-weight: normal;
+}
+
+.contact .title h2, .contact .name h2, .contact .seat h2, .contact .time h2 {
+  font-size: 1.5em;
+  color: #525252;
+  margin: 0;
+}
+
+.contact .title span, .contact .name span, .contact .seat span, .contact .time span {
+  font-size: .7em;
+  color: #a2aeae;
+}
+
+.contact .title {
+  margin-top: 3em;
+}
+
+.contact .title > * {
+  display: block;
+}
+
+.contact .name, .contact .seat, .contact .time {
+  margin-top: 2em;
+  margin-right: 1em;
+}
+
+.contact .seat, .contact .time {
+  float: left;
+}
+
+.contact img {
+  width: 3em;
+}
+
+.contact .number {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.contact .number h3 {
+  color: #e84c3d;
+  margin: .9em 0 0 0;
+  font-size: 2.5em;
+}
+
+.contact .number span {
+  display: block;
+  color: #a2aeae;
+}
+
+.contact .barcode {
+  height: 2em;
+  width: 0;
+  margin-right: 4em;
+  margin-top: 2em;
+  -webkit-box-shadow: 1px 0 0 1px #343434, 5px 0 0 1px #343434, 10px 0 0 1px #343434, 11px 0 0 1px #343434, 15px 0 0 1px #343434, 18px 0 0 1px #343434, 22px 0 0 1px #343434, 23px 0 0 1px #343434, 26px 0 0 1px #343434, 30px 0 0 1px #343434, 35px 0 0 1px #343434, 37px 0 0 1px #343434, 41px 0 0 1px #343434, 44px 0 0 1px #343434, 47px 0 0 1px #343434, 51px 0 0 1px #343434, 56px 0 0 1px #343434, 59px 0 0 1px #343434, 64px 0 0 1px #343434, 68px 0 0 1px #343434, 72px 0 0 1px #343434, 74px 0 0 1px #343434, 77px 0 0 1px #343434, 81px 0 0 1px #343434;
+          box-shadow: 1px 0 0 1px #343434, 5px 0 0 1px #343434, 10px 0 0 1px #343434, 11px 0 0 1px #343434, 15px 0 0 1px #343434, 18px 0 0 1px #343434, 22px 0 0 1px #343434, 23px 0 0 1px #343434, 26px 0 0 1px #343434, 30px 0 0 1px #343434, 35px 0 0 1px #343434, 37px 0 0 1px #343434, 41px 0 0 1px #343434, 44px 0 0 1px #343434, 47px 0 0 1px #343434, 51px 0 0 1px #343434, 56px 0 0 1px #343434, 59px 0 0 1px #343434, 64px 0 0 1px #343434, 68px 0 0 1px #343434, 72px 0 0 1px #343434, 74px 0 0 1px #343434, 77px 0 0 1px #343434, 81px 0 0 1px #343434;
 }
 /*# sourceMappingURL=App.css.map */
