--- a/src/Sass&Css/App.scss
+++ b/src/Sass&Css/App.scss
@@ -209,4 +209,138 @@ body {
 
 .contact{
   @include fullScreen;
+  font-size: 1vw;
+  @include flexCenter(row);
+  $red: #e84c3d;
+$grey: #ecedef;
+$black: #343434;
+
+.card {
+  background: linear-gradient(to bottom, $red 0%, $red 26%, $grey 26%, $grey 100%);
+  height: 30em;
+  float: left;
+  position: relative;
+  padding: 1em;
 }
+
+.cardLeft {
+  border-top-left-radius: 1em;
+  border-bottom-left-radius: 1em;
+  width: 40em;
+}
+
+.cardRight {
+  padding: 3em 0;
+  @include flexCustom(top, center, column);
+  width: 12.8em;
+  border-left: .18em dashed #fff;
+  border-radius: 1em;
+  &:before,
+  &:after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: .9em;
+    height: .9em;
+    background: #fff;
+    border-radius: 50%;
+    left: -.5em;
+  }
+  &:before {
+    top: -.4em;
+  }
+  &:after {
+  bottom: -.4em;
+  }
+}
+
+h1 {
+  font-size: 1.1em;
+  margin-top: 0.5em;
+  font-size: 3em;
+  span {
+    font-weight: normal;
+  }
+}
+
+.title, .name, .seat, .time {
+  text-transform: uppercase;
+  font-weight: normal;
+  h2 {
+    font-size: 1.5em;
+    color: #525252;
+    margin: 0;
+   }
+  span {
+    font-size: .7em;
+    color: #a2aeae;
+  }
+}
+
+.title {
+  & > *{
+    display: block;
+  }
+  margin-top: 3em;
+}
+
+.name, .seat, .time {
+  margin-top: 2em;
+  margin-right: 1em;
+}
+
+.seat, .time {
+  float: left;
+}
+
+img {
+  width: 3em;
+}
+
+.number {
+  text-align: center;
+  text-transform: uppercase;
+  h3 {
+    color: $red;
+    margin: .9em 0 0 0;
+    font-size: 2.5em;
+    
+  }
+  span {
+    display: block;
+    color: #a2aeae;
+  }
+}
+
+.barcode {
+  height: 2em;
+  width: 0;
+  margin-right: 4em;
+  margin-top: 2em;
+  box-shadow: 1px 0 0 1px $black,
+  5px 0 0 1px $black,
+  10px 0 0 1px $black,
+  11px 0 0 1px $black,
+  15px 0 0 1px $black,
+  18px 0 0 1px $black,
+  22px 0 0 1px $black,
+  23px 0 0 1px $black,
+  26px 0 0 1px $black,
+  30px 0 0 1px $black,
+  35px 0 0 1px $black,
+  37px 0 0 1px $black,
+  41px 0 0 1px $black,
+  44px 0 0 1px $black,
+  47px 0 0 1px $black,
+  51px 0 0 1px $black,
+  56px 0 0 1px $black,
+  59px 0 0 1px $black,
+  64px 0 0 1px $black,
+  68px 0 0 1px $black,
+  72px 0 0 1px $black,
+  74px 0 0 1px $black,
+  77px 0 0 1px $black,
+  81px 0 0 1px $black;
+}
+}
+
