--- a/src/Sass&Css/App.scss
+++ b/src/Sass&Css/App.scss
@@ -268,7 +268,7 @@ h1 {
   }
 }
 
-.title, .name, .seat, .time {
+.title, .name, .seat, .time, .description {
   text-transform: uppercase;
   font-weight: normal;
   span {
