--- a/src/Sass&Css/App.scss
+++ b/src/Sass&Css/App.scss
@@ -156,14 +156,29 @@ body {
   position: relative;
   width: 6rem;
   height: 6rem;
-  background-color: white;
-  border-radius: 1rem;
-  img{
+  transition: filter 500ms;
+  &:hover > .img-wrapper{
+    filter:brightness(0.8);
+    
+  }
+  .img-wrapper{
+    border-radius: 1rem;
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    &:hover > img{
+      transform: scale(1.1);
+    }
+     img{
+    transition: all 500ms;
     width: fit-content;
     height: inherit;
-    padding: 0.5em;
-  
+    padding: 0.8em;
+ 
   }
+ 
+  }
+
  
   p{
     position: absolute;
@@ -173,7 +188,8 @@ body {
     opacity: 0;
     transform: translateX(-50%);
     color: white;
-    font-weight: 300;
+    font-weight: 400;
+    
   }
   &:hover > p{
     opacity: 1;
@@ -372,3 +388,22 @@ img {
 }
 }
 
+//nav
+
+nav{
+  position: fixed;
+  z-index: 100;
+  left: 8rem;
+  top: 50%;
+  transform: translateY(-50%);
+  li{
+    list-style: none;
+    width: 1rem;
+    height: 1rem;
+    margin: 1rem 0;
+    border-radius: 50%;
+    border: 0.2rem solid #e84c3d;
+    background-color: transparent;
+  }
+
+}
