--- a/src/Sass&Css/App.scss
+++ b/src/Sass&Css/App.scss
@@ -408,3 +408,42 @@ nav{
   }
 
 }
+
+//login
+
+.loginpage{
+  @include fullScreen;
+  @include flexCenter(column);
+  form{
+    width: 60%;
+    height: fit-content;
+    padding: 4rem;
+    background-color: #e84c3d;
+    color: white;
+    border-radius: 2rem;
+    font-size: 1.4rem;
+    h1{
+      padding-bottom: 1rem;
+    }
+    p{
+      width: 100%;
+    }
+    button{
+      @include button;
+    }
+    
+    input{
+      color: white;
+      font-size: 1.4rem;
+      margin: 2rem;
+      width: 60rem;
+      @include input;
+      border-bottom: 2px solid black;
+      &:focus{
+        border-bottom: white 2px solid;
+      }
+    }
+  
+    @include flexCenter(column);
+  }
+}
